PECL3/gPL3Parser.java
// Generated from gPL3Parser.g4 by ANTLR 4.9
package PECL3;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class gPL3Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMENTARIOABRIR=1, COMENTARIOLINEA=2, PALGORITMO=3, PFINALGORITMO=4, PFUNCION=5, 
		PFINFUNCION=6, PDEFINIR=7, PCOMO=8, PLEER=9, PESCRIBIR=10, PSI=11, PENTONCES=12, 
		PSINO=13, PFINSI=14, PPARA=15, PHASTA=16, PHACER=17, PFINPARA=18, PMIENTRAS=19, 
		PFINMIENTRAS=20, PREPETIR=21, PHASTAQUE=22, PSEGUN=23, PDEOTROMODO=24, 
		PFINSEGUN=25, PTIPOS=26, PDIMENSION=27, ASIGNACION=28, MAS=29, MENOS=30, 
		IGUAL=31, MAYOR=32, MENOR=33, COMA=34, DOSPUNTOS=35, PI=36, PD=37, CI=38, 
		CD=39, Y=40, DIGITO=41, ID=42, PUNTOCOMA=43, TERMINAL=44, ESC=45, CADENA=46, 
		WS=47, COMENTARIOCERRAR=48, TEXTOCOMENTARIOML=49, FINAL_COMENTARIO_UL=50, 
		TEXTOCOMENTARIOUL=51;
	public static final int
		RULE_identificador = 0, RULE_pfinfuncion = 1, RULE_prog = 2, RULE_definicion = 3, 
		RULE_algoritmo = 4, RULE_si = 5, RULE_para = 6, RULE_mientras = 7, RULE_repetir = 8, 
		RULE_segun = 9, RULE_funcion = 10, RULE_argumentos = 11, RULE_dimension = 12, 
		RULE_bloque = 13, RULE_expresion = 14, RULE_llamadaFuncion = 15, RULE_operacion = 16, 
		RULE_array = 17, RULE_textos = 18, RULE_linea = 19, RULE_cabezafuncion = 20, 
		RULE_cuerpofuncion = 21, RULE_comentario = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"identificador", "pfinfuncion", "prog", "definicion", "algoritmo", "si", 
			"para", "mientras", "repetir", "segun", "funcion", "argumentos", "dimension", 
			"bloque", "expresion", "llamadaFuncion", "operacion", "array", "textos", 
			"linea", "cabezafuncion", "cuerpofuncion", "comentario"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'/**'", "'//'", "'Algoritmo'", "'FinAlgoritmo'", "'Funcion'", 
			null, null, "'Como'", "'Leer'", "'Escribir'", "'Si'", "'Entonces'", "'SiNo'", 
			null, "'Para'", "'Hasta'", "'Hacer'", "'FinPara'", "'Mientras'", null, 
			"'Repetir'", "'Hasta Que'", "'Segun'", "'De Otro Modo'", "'FinSegun'", 
			null, null, "'<-'", "'+'", "'-'", "'='", "'<'", "'>'", "','", "':'", 
			"'('", "')'", "'['", "']'", "'&'", null, null, "';'", null, null, null, 
			null, "'**/'", null, "'\r\n'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COMENTARIOABRIR", "COMENTARIOLINEA", "PALGORITMO", "PFINALGORITMO", 
			"PFUNCION", "PFINFUNCION", "PDEFINIR", "PCOMO", "PLEER", "PESCRIBIR", 
			"PSI", "PENTONCES", "PSINO", "PFINSI", "PPARA", "PHASTA", "PHACER", "PFINPARA", 
			"PMIENTRAS", "PFINMIENTRAS", "PREPETIR", "PHASTAQUE", "PSEGUN", "PDEOTROMODO", 
			"PFINSEGUN", "PTIPOS", "PDIMENSION", "ASIGNACION", "MAS", "MENOS", "IGUAL", 
			"MAYOR", "MENOR", "COMA", "DOSPUNTOS", "PI", "PD", "CI", "CD", "Y", "DIGITO", 
			"ID", "PUNTOCOMA", "TERMINAL", "ESC", "CADENA", "WS", "COMENTARIOCERRAR", 
			"TEXTOCOMENTARIOML", "FINAL_COMENTARIO_UL", "TEXTOCOMENTARIOUL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "gPL3Parser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public gPL3Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class IdentificadorContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(gPL3Parser.ID, 0); }
		public IdentificadorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identificador; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gPL3ParserListener ) ((gPL3ParserListener)listener).enterIdentificador(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gPL3ParserListener ) ((gPL3ParserListener)listener).exitIdentificador(this);
		}
	}

	public final IdentificadorContext identificador() throws RecognitionException {
		IdentificadorContext _localctx = new IdentificadorContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_identificador);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PfinfuncionContext extends ParserRuleContext {
		public TerminalNode PFINFUNCION() { return getToken(gPL3Parser.PFINFUNCION, 0); }
		public PfinfuncionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pfinfuncion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gPL3ParserListener ) ((gPL3ParserListener)listener).enterPfinfuncion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gPL3ParserListener ) ((gPL3ParserListener)listener).exitPfinfuncion(this);
		}
	}

	public final PfinfuncionContext pfinfuncion() throws RecognitionException {
		PfinfuncionContext _localctx = new PfinfuncionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_pfinfuncion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(PFINFUNCION);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgContext extends ParserRuleContext {
		public List<TerminalNode> TERMINAL() { return getTokens(gPL3Parser.TERMINAL); }
		public TerminalNode TERMINAL(int i) {
			return getToken(gPL3Parser.TERMINAL, i);
		}
		public List<AlgoritmoContext> algoritmo() {
			return getRuleContexts(AlgoritmoContext.class);
		}
		public AlgoritmoContext algoritmo(int i) {
			return getRuleContext(AlgoritmoContext.class,i);
		}
		public List<FuncionContext> funcion() {
			return getRuleContexts(FuncionContext.class);
		}
		public FuncionContext funcion(int i) {
			return getRuleContext(FuncionContext.class,i);
		}
		public List<ComentarioContext> comentario() {
			return getRuleContexts(ComentarioContext.class);
		}
		public ComentarioContext comentario(int i) {
			return getRuleContext(ComentarioContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gPL3ParserListener ) ((gPL3ParserListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gPL3ParserListener ) ((gPL3ParserListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COMENTARIOABRIR) | (1L << COMENTARIOLINEA) | (1L << PALGORITMO) | (1L << PFUNCION))) != 0)) {
				{
				{
				setState(53);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case PALGORITMO:
					{
					setState(50);
					algoritmo();
					}
					break;
				case PFUNCION:
					{
					setState(51);
					funcion();
					}
					break;
				case COMENTARIOABRIR:
				case COMENTARIOLINEA:
					{
					setState(52);
					comentario();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(55);
				match(TERMINAL);
				}
				}
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinicionContext extends ParserRuleContext {
		public TerminalNode PDEFINIR() { return getToken(gPL3Parser.PDEFINIR, 0); }
		public List<IdentificadorContext> identificador() {
			return getRuleContexts(IdentificadorContext.class);
		}
		public IdentificadorContext identificador(int i) {
			return getRuleContext(IdentificadorContext.class,i);
		}
		public TerminalNode PCOMO() { return getToken(gPL3Parser.PCOMO, 0); }
		public TerminalNode PTIPOS() { return getToken(gPL3Parser.PTIPOS, 0); }
		public List<TerminalNode> COMA() { return getTokens(gPL3Parser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(gPL3Parser.COMA, i);
		}
		public TerminalNode PUNTOCOMA() { return getToken(gPL3Parser.PUNTOCOMA, 0); }
		public DefinicionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gPL3ParserListener ) ((gPL3ParserListener)listener).enterDefinicion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gPL3ParserListener ) ((gPL3ParserListener)listener).exitDefinicion(this);
		}
	}

	public final DefinicionContext definicion() throws RecognitionException {
		DefinicionContext _localctx = new DefinicionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_definicion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(PDEFINIR);
			setState(63);
			identificador();
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(64);
				match(COMA);
				setState(65);
				identificador();
				}
				}
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(71);
			match(PCOMO);
			setState(72);
			match(PTIPOS);
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PUNTOCOMA) {
				{
				setState(73);
				match(PUNTOCOMA);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AlgoritmoContext extends ParserRuleContext {
		public TerminalNode PALGORITMO() { return getToken(gPL3Parser.PALGORITMO, 0); }
		public IdentificadorContext identificador() {
			return getRuleContext(IdentificadorContext.class,0);
		}
		public TerminalNode PFINALGORITMO() { return getToken(gPL3Parser.PFINALGORITMO, 0); }
		public TerminalNode TERMINAL() { return getToken(gPL3Parser.TERMINAL, 0); }
		public List<LineaContext> linea() {
			return getRuleContexts(LineaContext.class);
		}
		public LineaContext linea(int i) {
			return getRuleContext(LineaContext.class,i);
		}
		public List<BloqueContext> bloque() {
			return getRuleContexts(BloqueContext.class);
		}
		public BloqueContext bloque(int i) {
			return getRuleContext(BloqueContext.class,i);
		}
		public AlgoritmoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_algoritmo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gPL3ParserListener ) ((gPL3ParserListener)listener).enterAlgoritmo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gPL3ParserListener ) ((gPL3ParserListener)listener).exitAlgoritmo(this);
		}
	}

	public final AlgoritmoContext algoritmo() throws RecognitionException {
		AlgoritmoContext _localctx = new AlgoritmoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_algoritmo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(PALGORITMO);
			setState(77);
			identificador();
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TERMINAL) {
				{
				setState(78);
				match(TERMINAL);
				}
			}

			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COMENTARIOABRIR) | (1L << COMENTARIOLINEA) | (1L << PDEFINIR) | (1L << PLEER) | (1L << PESCRIBIR) | (1L << PSI) | (1L << PPARA) | (1L << PMIENTRAS) | (1L << PREPETIR) | (1L << PSEGUN) | (1L << PDIMENSION) | (1L << PI) | (1L << DIGITO) | (1L << ID) | (1L << CADENA))) != 0)) {
				{
				setState(83);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case COMENTARIOABRIR:
				case COMENTARIOLINEA:
				case PLEER:
				case PESCRIBIR:
				case PI:
				case DIGITO:
				case ID:
				case CADENA:
					{
					setState(81);
					linea();
					}
					break;
				case PDEFINIR:
				case PSI:
				case PPARA:
				case PMIENTRAS:
				case PREPETIR:
				case PSEGUN:
				case PDIMENSION:
					{
					setState(82);
					bloque();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(88);
			match(PFINALGORITMO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SiContext extends ParserRuleContext {
		public TerminalNode PSI() { return getToken(gPL3Parser.PSI, 0); }
		public OperacionContext operacion() {
			return getRuleContext(OperacionContext.class,0);
		}
		public TerminalNode PENTONCES() { return getToken(gPL3Parser.PENTONCES, 0); }
		public TerminalNode PFINSI() { return getToken(gPL3Parser.PFINSI, 0); }
		public TerminalNode TERMINAL() { return getToken(gPL3Parser.TERMINAL, 0); }
		public List<SiContext> si() {
			return getRuleContexts(SiContext.class);
		}
		public SiContext si(int i) {
			return getRuleContext(SiContext.class,i);
		}
		public TerminalNode PSINO() { return getToken(gPL3Parser.PSINO, 0); }
		public List<LineaContext> linea() {
			return getRuleContexts(LineaContext.class);
		}
		public LineaContext linea(int i) {
			return getRuleContext(LineaContext.class,i);
		}
		public SiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_si; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gPL3ParserListener ) ((gPL3ParserListener)listener).enterSi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gPL3ParserListener ) ((gPL3ParserListener)listener).exitSi(this);
		}
	}

	public final SiContext si() throws RecognitionException {
		SiContext _localctx = new SiContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_si);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(PSI);
			setState(91);
			operacion(0);
			setState(92);
			match(PENTONCES);
			setState(100);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COMENTARIOABRIR:
			case COMENTARIOLINEA:
			case PLEER:
			case PESCRIBIR:
			case PSINO:
			case PFINSI:
			case PI:
			case DIGITO:
			case ID:
			case CADENA:
				{
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COMENTARIOABRIR) | (1L << COMENTARIOLINEA) | (1L << PLEER) | (1L << PESCRIBIR) | (1L << PI) | (1L << DIGITO) | (1L << ID) | (1L << CADENA))) != 0)) {
					{
					{
					setState(93);
					linea();
					}
					}
					setState(98);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case PSI:
				{
				setState(99);
				si();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PSINO) {
				{
				setState(102);
				match(PSINO);
				setState(110);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case COMENTARIOABRIR:
				case COMENTARIOLINEA:
				case PLEER:
				case PESCRIBIR:
				case PFINSI:
				case PI:
				case DIGITO:
				case ID:
				case CADENA:
					{
					setState(106);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COMENTARIOABRIR) | (1L << COMENTARIOLINEA) | (1L << PLEER) | (1L << PESCRIBIR) | (1L << PI) | (1L << DIGITO) | (1L << ID) | (1L << CADENA))) != 0)) {
						{
						{
						setState(103);
						linea();
						}
						}
						setState(108);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
					break;
				case PSI:
					{
					setState(109);
					si();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
			}

			setState(114);
			match(PFINSI);
			setState(115);
			match(TERMINAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParaContext extends ParserRuleContext {
		public TerminalNode PPARA() { return getToken(gPL3Parser.PPARA, 0); }
		public OperacionContext operacion() {
			return getRuleContext(OperacionContext.class,0);
		}
		public TerminalNode PHASTA() { return getToken(gPL3Parser.PHASTA, 0); }
		public TerminalNode PHACER() { return getToken(gPL3Parser.PHACER, 0); }
		public TerminalNode PFINPARA() { return getToken(gPL3Parser.PFINPARA, 0); }
		public TerminalNode TERMINAL() { return getToken(gPL3Parser.TERMINAL, 0); }
		public TerminalNode DIGITO() { return getToken(gPL3Parser.DIGITO, 0); }
		public IdentificadorContext identificador() {
			return getRuleContext(IdentificadorContext.class,0);
		}
		public List<LineaContext> linea() {
			return getRuleContexts(LineaContext.class);
		}
		public LineaContext linea(int i) {
			return getRuleContext(LineaContext.class,i);
		}
		public ParaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_para; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gPL3ParserListener ) ((gPL3ParserListener)listener).enterPara(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gPL3ParserListener ) ((gPL3ParserListener)listener).exitPara(this);
		}
	}

	public final ParaContext para() throws RecognitionException {
		ParaContext _localctx = new ParaContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_para);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(PPARA);
			setState(118);
			operacion(0);
			setState(119);
			match(PHASTA);
			setState(122);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DIGITO:
				{
				setState(120);
				match(DIGITO);
				}
				break;
			case ID:
				{
				setState(121);
				identificador();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(124);
			match(PHACER);
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COMENTARIOABRIR) | (1L << COMENTARIOLINEA) | (1L << PLEER) | (1L << PESCRIBIR) | (1L << PI) | (1L << DIGITO) | (1L << ID) | (1L << CADENA))) != 0)) {
				{
				{
				setState(125);
				linea();
				}
				}
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(131);
			match(PFINPARA);
			setState(132);
			match(TERMINAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MientrasContext extends ParserRuleContext {
		public TerminalNode PMIENTRAS() { return getToken(gPL3Parser.PMIENTRAS, 0); }
		public OperacionContext operacion() {
			return getRuleContext(OperacionContext.class,0);
		}
		public TerminalNode PHACER() { return getToken(gPL3Parser.PHACER, 0); }
		public TerminalNode PFINMIENTRAS() { return getToken(gPL3Parser.PFINMIENTRAS, 0); }
		public List<LineaContext> linea() {
			return getRuleContexts(LineaContext.class);
		}
		public LineaContext linea(int i) {
			return getRuleContext(LineaContext.class,i);
		}
		public List<SiContext> si() {
			return getRuleContexts(SiContext.class);
		}
		public SiContext si(int i) {
			return getRuleContext(SiContext.class,i);
		}
		public TerminalNode TERMINAL() { return getToken(gPL3Parser.TERMINAL, 0); }
		public MientrasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mientras; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gPL3ParserListener ) ((gPL3ParserListener)listener).enterMientras(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gPL3ParserListener ) ((gPL3ParserListener)listener).exitMientras(this);
		}
	}

	public final MientrasContext mientras() throws RecognitionException {
		MientrasContext _localctx = new MientrasContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_mientras);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(PMIENTRAS);
			setState(135);
			operacion(0);
			setState(136);
			match(PHACER);
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COMENTARIOABRIR) | (1L << COMENTARIOLINEA) | (1L << PLEER) | (1L << PESCRIBIR) | (1L << PSI) | (1L << PI) | (1L << DIGITO) | (1L << ID) | (1L << CADENA))) != 0)) {
				{
				setState(139);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case COMENTARIOABRIR:
				case COMENTARIOLINEA:
				case PLEER:
				case PESCRIBIR:
				case PI:
				case DIGITO:
				case ID:
				case CADENA:
					{
					setState(137);
					linea();
					}
					break;
				case PSI:
					{
					setState(138);
					si();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(144);
			match(PFINMIENTRAS);
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TERMINAL) {
				{
				setState(145);
				match(TERMINAL);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RepetirContext extends ParserRuleContext {
		public TerminalNode PREPETIR() { return getToken(gPL3Parser.PREPETIR, 0); }
		public TerminalNode PHASTAQUE() { return getToken(gPL3Parser.PHASTAQUE, 0); }
		public OperacionContext operacion() {
			return getRuleContext(OperacionContext.class,0);
		}
		public TerminalNode TERMINAL() { return getToken(gPL3Parser.TERMINAL, 0); }
		public List<LineaContext> linea() {
			return getRuleContexts(LineaContext.class);
		}
		public LineaContext linea(int i) {
			return getRuleContext(LineaContext.class,i);
		}
		public RepetirContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_repetir; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gPL3ParserListener ) ((gPL3ParserListener)listener).enterRepetir(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gPL3ParserListener ) ((gPL3ParserListener)listener).exitRepetir(this);
		}
	}

	public final RepetirContext repetir() throws RecognitionException {
		RepetirContext _localctx = new RepetirContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_repetir);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(PREPETIR);
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COMENTARIOABRIR) | (1L << COMENTARIOLINEA) | (1L << PLEER) | (1L << PESCRIBIR) | (1L << PI) | (1L << DIGITO) | (1L << ID) | (1L << CADENA))) != 0)) {
				{
				{
				setState(149);
				linea();
				}
				}
				setState(154);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(155);
			match(PHASTAQUE);
			setState(156);
			operacion(0);
			setState(157);
			match(TERMINAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SegunContext extends ParserRuleContext {
		public TerminalNode PSEGUN() { return getToken(gPL3Parser.PSEGUN, 0); }
		public IdentificadorContext identificador() {
			return getRuleContext(IdentificadorContext.class,0);
		}
		public TerminalNode PHACER() { return getToken(gPL3Parser.PHACER, 0); }
		public TerminalNode PFINSEGUN() { return getToken(gPL3Parser.PFINSEGUN, 0); }
		public List<TerminalNode> TERMINAL() { return getTokens(gPL3Parser.TERMINAL); }
		public TerminalNode TERMINAL(int i) {
			return getToken(gPL3Parser.TERMINAL, i);
		}
		public List<TerminalNode> DOSPUNTOS() { return getTokens(gPL3Parser.DOSPUNTOS); }
		public TerminalNode DOSPUNTOS(int i) {
			return getToken(gPL3Parser.DOSPUNTOS, i);
		}
		public TerminalNode PDEOTROMODO() { return getToken(gPL3Parser.PDEOTROMODO, 0); }
		public List<TerminalNode> CADENA() { return getTokens(gPL3Parser.CADENA); }
		public TerminalNode CADENA(int i) {
			return getToken(gPL3Parser.CADENA, i);
		}
		public List<TerminalNode> DIGITO() { return getTokens(gPL3Parser.DIGITO); }
		public TerminalNode DIGITO(int i) {
			return getToken(gPL3Parser.DIGITO, i);
		}
		public List<LineaContext> linea() {
			return getRuleContexts(LineaContext.class);
		}
		public LineaContext linea(int i) {
			return getRuleContext(LineaContext.class,i);
		}
		public SegunContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_segun; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gPL3ParserListener ) ((gPL3ParserListener)listener).enterSegun(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gPL3ParserListener ) ((gPL3ParserListener)listener).exitSegun(this);
		}
	}
